objects/CommitFetch__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manageble_State__c</fullName>
        <label>Manageble State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <label>Members</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>CommitFetch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CF -{0000}</displayFormat>
        <label>CommitFetch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CommitFetch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>